Fix #27: Implement background location permission (#28)
* Rewrite location permission handling using appcompat.
* Use LocationStateDeterminer to figure out what state the device is in to show the right message.
* Merge LocationStateDeterminer into LocationPermissionCompat, and remove EasyPermissions
* Don't trust permission=false, shouldShowRationale=false, this could mean both things: user has not seen permission dialog or permanently denied.
* Split messages and create warning component
* Show/hide guide action buttons when wouldn't work.
* Extract PermissionInterrogator class
* Clarify rationales for each API level.
* Extract warning banner and give it some looks.